Fixed top margin on mobile

--- a/styles/home.css
+++ b/styles/home.css
@@ -64,7 +64,7 @@
 
 @media all and (orientation: portrait) {
     #main {
-        margin-top: -40px !important;
+        margin-top: -5px !important;
     }
     
 
